...
        previewImageView.image = quizStepViewModel.image
        questionLabel.text = quizStepViewModel.question
        counterLabel.text = quizStepViewModel.questionNumber
    }
    
    func showQuizResults(quizResultsViewModel: QuizResultsViewModel){
        let alertIdentifier = "Game results"
        let alertModel = AlertModel(title: quizResultsViewModel.title,
                                    text: quizResultsViewModel.text,
                                    buttonText: quizResultsViewModel.buttonText,
                                    identifier: alertIdentifier,
                                    completion: { [weak self] in
            self?.movieQuizPresenter.restartGame()
...
